syntax = "proto3";

option csharp_namespace = "Provider.Grpc.Protos";
package Provider;

service ProviderFeesProtoService {
    rpc Fees (FeesRequest) returns (FeesResponse);
}

 message FeesRequest {
    int32 request_id =1;
    double amount=2; 
    int32 provider_id = 3;
    string provider_code = 4;
}

 message FeesResponse {
    string provider_reference_number = 1;
    string status = 2;
    string status_text = 3; 
    string date_time = 4;
    double amount = 5;
    double Fees = 6;
}
